--- a/views/home.html
+++ b/views/home.html
@@ -5,8 +5,7 @@
     <title>Pets2</title>
 </head>
 <body>
-<h1>My Pets</h1>
-<a href='./order'>Order a Pet</a>
-
+    <h1>My Pets</h1>
+    <a href='pets/order'>Order a Pet</a>
 </body>
 </html>
