--- a/views/new-pet.html
+++ b/views/new-pet.html
@@ -15,7 +15,7 @@
         <check if="{{isset(@errors['name']) }}">
             <p>{{@errors['name'] }}</p>
         </check>
-        <input class="form-control" type="text" name="pet-name">
+        <input type="text" name="pet-name" <check if="{{ isset(@name) }}"> value="{{@name}}"</check>>
 
     </div>
 
@@ -29,7 +29,7 @@
         </check>
         <select class="form-control" name="pet-color" id="pet-color">
             <repeat group="{{@colors}}" value="{{@colorOption}}">
-                <option> {{@colorOption}}</option>
+                <option <check if="{{ @colorOption == @color }}">selected</check>  value="{{ @colorOption }}" > {{ @colorOption }}</option>
             </repeat>
         </select>
     </div>
@@ -39,7 +39,7 @@
         <check if="{{isset(@errors['type']) }}">
             <p>{{@errors['type'] }}</p>
         </check>
-        <input class="form-control" type="text" name="pet-type">
+        <input type="text" name="pet-type" <check if="{{ isset(@type) }}">value="{{@type}}"</check>>
 
     </div>
 
